# swedish-market-insights

./: .gitignore  Pipfile  README.md  pyproject.toml  setup.py
.github/workflows/: ci-cd.yml
insyn/: insynsregistret.py  main.py  soup_utils.py  trade.py  utils.py
swedish_market_insights/: constants.py  ficlient.py  inside_trades.py  short_positions.py  soup_utils.py  trade.py  utils.py
tests/: context.py  mock_short_positions.ods  test_short_positions.py  test_trade_entry.py  test_utils.py
