[tool.poetry]
name = "swedish_market_insights"
version = "0.1.1"
description = "Package to scrape the Finansinspektion's registers"
authors = ["Fritjof Bengtsson <fritjof.folkeson@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.12.2"
requests = "^2.28.2"
pytest = "^7.3.1"
black = "^23.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
