[tool.poetry]
name = "swedish_market_insights"
version = "0.3.0"
description = "Package to scrape the Finansinspektion's registers"
authors = ["Fritjof Bengtsson <fritjof.folkeson@gmail.com>"]
repository = "https://github.com/fritjof-b/swedish-market-insights"
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.12.2"
requests = "2.28.2"
pandas = "^2.0.1"
odfpy = "^1.4.1"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pytest = "^7.3.1"
responses = "^0.23.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
